--- a/index.html
+++ b/index.html
@@ -2,9 +2,55 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Luxury restaurant - landing page</title>
+    <link href="https://fonts.googleapis.com/css?family=Playfair+Display:400,700|Sintony:400,700" rel="stylesheet">
+    <link rel="stylesheet" href="assets/css/normalize.css">
+    <link rel="stylesheet" href="assets/css/style.css">
 </head>
 <body>
-
+<header>
+    <div class="container">
+        <nav class="main-navigation">
+            <img src="assets/img/logo.png" alt="logo luxury restaurant">
+            <div class="menu-with-cta">
+                <ul>
+                    <li>
+                        <a href="#">Home</a>
+                    </li>
+                    <li>
+                        <a href="#">Menu</a>
+                    </li>
+                    <li>
+                        <a href="#">Reservation</a>
+                    </li>
+                    <li>
+                        <a href="#">Recipe</a>
+                    </li>
+                    <li>
+                        <a href="#">Blog</a>
+                    </li>
+                    <li>
+                        <a href="#">Pages</a>
+                    </li>
+                    <li>
+                        <a href="#">Contact</a>
+                    </li>
+                </ul>
+                <div class="shopping-cart-option">
+                    <a href="#">
+                        <img src="assets/img/icon_cart.png" alt="icon with shopping cart">
+                    </a>
+                    <a href="#">
+                        <img src="assets/img/arrow-cart.png" alt="arrow for shopping cart">
+                    </a>
+                </div>
+                <a href="#" class="cta-button">
+                    <img src="assets/img/icon_plate.png" alt="icon plate for button">
+                    <span>Book your table</span>
+                </a>
+            </div>
+        </nav>
+    </div>
+</header>
 </body>
 </html>
