add 1-st screen

--- a/index.html
+++ b/index.html
@@ -8,49 +8,81 @@
     <link rel="stylesheet" href="assets/css/style.css">
 </head>
 <body>
-<header>
-    <div class="container">
-        <nav class="main-navigation">
-            <img src="assets/img/logo.png" alt="logo luxury restaurant">
-            <div class="menu-with-cta">
-                <ul>
-                    <li>
-                        <a href="#">Home</a>
-                    </li>
-                    <li>
-                        <a href="#">Menu</a>
-                    </li>
-                    <li>
-                        <a href="#">Reservation</a>
-                    </li>
-                    <li>
-                        <a href="#">Recipe</a>
-                    </li>
-                    <li>
-                        <a href="#">Blog</a>
-                    </li>
-                    <li>
-                        <a href="#">Pages</a>
-                    </li>
-                    <li>
-                        <a href="#">Contact</a>
-                    </li>
-                </ul>
-                <div class="shopping-cart-option">
-                    <a href="#">
-                        <img src="assets/img/icon_cart.png" alt="icon with shopping cart">
-                    </a>
-                    <a href="#">
-                        <img src="assets/img/arrow-cart.png" alt="arrow for shopping cart">
+    <header>
+        <div class="container">
+            <nav class="main-navigation">
+                <img src="assets/img/logo.png" alt="logo luxury restaurant">
+                <div class="menu-with-cta">
+                    <ul>
+                        <li>
+                            <a href="#">Home</a>
+                        </li>
+                        <li>
+                            <a href="#">Menu</a>
+                        </li>
+                        <li>
+                            <a href="#">Reservation</a>
+                        </li>
+                        <li>
+                            <a href="#">Recipe</a>
+                        </li>
+                        <li>
+                            <a href="#">Blog</a>
+                        </li>
+                        <li>
+                            <a href="#">Pages</a>
+                        </li>
+                        <li>
+                            <a href="#">Contact</a>
+                        </li>
+                    </ul>
+                    <div class="shopping-cart-option">
+                        <a href="#">
+                            <img src="assets/img/icon_cart.png" alt="icon with shopping cart">
+                        </a>
+                        <a href="#">
+                            <img src="assets/img/arrow-cart.png" alt="arrow for shopping cart">
+                        </a>
+                    </div>
+                    <a href="#" class="cta-button">
+                        <img src="assets/img/icon_plate.png" alt="icon plate for button">
+                        <span class="button-text">Book your table</span>
                     </a>
                 </div>
-                <a href="#" class="cta-button">
-                    <img src="assets/img/icon_plate.png" alt="icon plate for button">
-                    <span>Book your table</span>
+            </nav>
+        </div>
+    </header>
+    <section class="main-offer">
+        <div class="container">
+            <div class="text-offer">
+                <h1>Teast your fav dish</h1>
+                <p>
+                    from <span class="accent-color">luxury restaurant.</span>
+                </p>
+            </div>
+            <div class="pagination-carousel">
+                <a href="#">
+                    <img src="assets/img/carousel-active.png" alt="pagination for carousel">
+                </a>
+                <a href="#">
+                    <img src="assets/img/carousel-inactive.png" alt="pagination for carousel">
+                </a>
+                <a href="#">
+                    <img src="assets/img/carousel-inactive.png" alt="pagination for carousel">
                 </a>
             </div>
-        </nav>
-    </div>
-</header>
+        </div>
+    </section>
+    <section class="explore-food-menu">
+        <div class="container">
+            <div class="ribbon">
+                <a href="">
+                    <h2>
+                        Exlore food Menu
+                    </h2>
+                </a>
+            </div>
+        </div>
+    </section>
 </body>
 </html>
