add ribbon label

--- a/index.html
+++ b/index.html
@@ -76,12 +76,14 @@
     <section class="explore-food-menu">
         <div class="container">
             <div class="ribbon">
-                <a href="">
-                    <h2>
-                        Exlore food Menu
+                <a href="#">
+                    <img src="assets/img/food-ribbon.png" alt="ribbon for food menu" class="ribbon-image">
+                    <h2 class="label-food-menu">
+                        Explore food Menu
                     </h2>
                 </a>
             </div>
+            
         </div>
     </section>
 </body>
