add explore food menu section

--- a/index.html
+++ b/index.html
@@ -83,7 +83,35 @@
                     </h2>
                 </a>
             </div>
-            
+            <nav>
+                <ul class="contact-menu">
+                    <li class="read-reviews">
+                        <a href="#">
+                            <img src="assets/img/icon_reviews.png" alt="chat icon reviews">
+                        </a>
+                        <a href="#" class="link-text">
+                            Read
+                            <span class="accent-color">reviews</span>
+                        </a>
+                        <a href="#">
+                            <img src="assets/img/arrow-read-more.png" alt="read more arrow icon">
+                        </a>
+                    </li>
+                    <li class="home-delivery">
+                        <a href="#">
+                            <img src="assets/img/icon_reviews.png" alt="chat icon reviews">
+                        </a>
+                        <a href="#" class="link-text">
+                            Call us Now for
+
+                            <span class="accent-color">Home Delivery</span>
+                        </a>
+                    </li>
+                    <li class="phone-number">
+                        <a href="tel: 1 008 005 006">1-008 005 006</a>
+                    </li>
+                </ul>
+            </nav>
         </div>
     </section>
 </body>
