add about section

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Luxury restaurant - landing page</title>
+    <link rel="icon" href="favicon.ico">
     <link href="https://fonts.googleapis.com/css?family=Playfair+Display:400,700|Sintony:400,700" rel="stylesheet">
     <link rel="stylesheet" href="assets/css/normalize.css">
     <link rel="stylesheet" href="assets/css/style.css">
@@ -112,6 +113,36 @@
                     </li>
                 </ul>
             </nav>
+        </div>
+    </section>
+    <section class="about-restaurant">
+        <div class="container">
+            <div class="info-about">
+                <h2>About Restaurant</h2>
+                <p>
+                    Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the
+                    industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type
+                    and scrambled it to make a type specimen book. It has survived not only five centuries, but also
+                    the leap into electronic typesetting, remaining essentially unchanged
+                    <span class="accent-color">...</span>
+                </p>
+                <div class="read-more">
+                    <a href="#" class="button-read-more">Read more</a>
+                    <a href="#">
+                        <img src="assets/img/banner-read-more.png" alt="banner for read more with tasty food">
+                    </a>
+                </div>
+            </div>
+            <div class="images-about">
+                <div class="align-bottom">
+                    <img src="assets/img/food-1.png" alt="tasty food">
+                    <img src="assets/img/food-2.png" alt="tasty food" class="bottom-image">
+                </div>
+                <div class="align-top">
+                    <img src="assets/img/food-3.png" alt="tasty food">
+                    <img src="assets/img/food-4.png" alt="tasty food" class="bottom-image">
+                </div>
+            </div>
         </div>
     </section>
 </body>
