add today special

--- a/index.html
+++ b/index.html
@@ -145,5 +145,28 @@
             </div>
         </div>
     </section>
+    <section class="today-special">
+        <div class="container">
+            <h2 class="header-pagination">Today Special</h2>
+            <div class="cards">
+                <div class="card">
+                    <a href="#">
+                        <img src="assets/img/food-menu-item1.png" alt="food card photo">
+                    </a>
+                </div>
+            </div>
+            <div class="pagination-carousel">
+                <a href="#">
+                    <img src="assets/img/carousel-inactive.png" alt="pagination for carousel">
+                </a>
+                <a href="#">
+                    <img src="assets/img/carousel-inactive.png" alt="pagination for carousel">
+                </a>
+                <a href="#">
+                    <img src="assets/img/carousel-active.png" alt="pagination for carousel">
+                </a>
+            </div>
+        </div>
+    </section>
 </body>
 </html>
