--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
                         </a>
                     </li>
                     <li class="phone-number">
-                        <a href="tel: 1 008 005 006">1-008 005 006</a>
+                        <a href="tel:1008005006">1-008 005 006</a>
                     </li>
                 </ul>
             </nav>
@@ -148,11 +148,30 @@
     <section class="today-special">
         <div class="container">
             <h2 class="header-pagination">Today Special</h2>
-            <div class="cards">
-                <div class="card">
+            <div class="cards-today">
+                <div class="card-item">
                     <a href="#">
                         <img src="assets/img/food-menu-item1.png" alt="food card photo">
                     </a>
+                    <div class="item-info">
+                        <h3>Food Name one</h3>
+                        <p>
+                            printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text
+                            ever since the 1500s, when an unknown printer took a galley of type and scrambled.
+                        </p>
+                        <div class="card-footer">
+                            <div class="left">
+                                <a href="#" class="delivery-link">
+                                    Home
+                                    <span class="secondary-color">Delivary</span>
+                                </a>
+                                <a href="tel:1008005006" class="phone-delivery">1-008 005 006</a>
+                            </div>
+                            <a href="#" class="price accent-color">
+                                <span class="accent-color">$89.00</span>
+                            </a>
+                        </div>
+                    </div>
                 </div>
             </div>
             <div class="pagination-carousel">
