add second card for section today special

--- a/index.html
+++ b/index.html
@@ -173,6 +173,30 @@
                         </div>
                     </div>
                 </div>
+                <div class="card-item">
+                    <a href="#">
+                        <img src="assets/img/food-menu-item2.png" alt="food card photo">
+                    </a>
+                    <div class="item-info">
+                        <h3>Food Name two</h3>
+                        <p>
+                            printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text
+                            ever since the 1500s, when an unknown printer took a galley of type and scrambled.
+                        </p>
+                        <div class="card-footer">
+                            <div class="left">
+                                <a href="#" class="delivery-link">
+                                    Home
+                                    <span class="secondary-color">Delivary</span>
+                                </a>
+                                <a href="tel:1008005006" class="phone-delivery">1-008 005 006</a>
+                            </div>
+                            <a href="#" class="price accent-color">
+                                <span class="accent-color">$99.00</span>
+                            </a>
+                        </div>
+                    </div>
+                </div>
             </div>
             <div class="pagination-carousel">
                 <a href="#">
