fix link for font

--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <title>Luxury restaurant - landing page</title>
     <link rel="icon" href="favicon.ico">
-    <link href="https://fonts.googleapis.com/css?family=Playfair+Display:400,700|Sintony:400,700" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Playfair+Display:400,700" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Sintony:400,700" rel="stylesheet">
     <link rel="stylesheet" href="assets/css/normalize.css">
     <link rel="stylesheet" href="assets/css/style.css">
 </head>
@@ -100,7 +101,7 @@
                     </li>
                     <li class="home-delivery">
                         <a href="#">
-                            <img src="assets/img/icon_reviews.png" alt="chat icon reviews">
+                            <img src="assets/img/icon_phone.png" alt="chat icon reviews">
                         </a>
                         <a href="#" class="link-text">
                             Call us Now for
