--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
             <div class="cards-today">
                 <div class="card-item">
                     <a href="#">
-                        <img src="assets/img/food-menu-item1.png" alt="food card photo">
+                        <img src="assets/img/food-menu-item1.png" alt="food card photo" class="card-photo-food">
                     </a>
                     <div class="item-info">
                         <h3>Food Name one</h3>
@@ -176,7 +176,7 @@
                 </div>
                 <div class="card-item">
                     <a href="#">
-                        <img src="assets/img/food-menu-item2.png" alt="food card photo">
+                        <img src="assets/img/food-menu-item2.png" alt="food card photo" class="card-photo-food">
                     </a>
                     <div class="item-info">
                         <h3>Food Name two</h3>
