add navigation for food menu section

--- a/index.html
+++ b/index.html
@@ -198,18 +198,76 @@
                         </div>
                     </div>
                 </div>
+                <div class="pagination-carousel">
+                    <a href="#">
+                        <img src="assets/img/carousel-inactive.png" alt="pagination for carousel">
+                    </a>
+                    <a href="#">
+                        <img src="assets/img/carousel-inactive.png" alt="pagination for carousel">
+                    </a>
+                    <a href="#">
+                        <img src="assets/img/carousel-active.png" alt="pagination for carousel">
+                    </a>
+                </div>
+                <div class="background-banner">
+                    <img src="assets/img/fast-burger.png" alt="banner with tasty burger">
+                </div>
             </div>
-            <div class="pagination-carousel">
-                <a href="#">
-                    <img src="assets/img/carousel-inactive.png" alt="pagination for carousel">
-                </a>
-                <a href="#">
-                    <img src="assets/img/carousel-inactive.png" alt="pagination for carousel">
-                </a>
-                <a href="#">
-                    <img src="assets/img/carousel-active.png" alt="pagination for carousel">
-                </a>
-            </div>
+
+        </div>
+    </section>
+    <section class="food-menu">
+        <div class="title-container">
+            <h2>Food Menu</h2>
+            <nav class="menu-navigation">
+                <ul>
+                    <li>
+                        <a href="#">
+                            <img src="assets/img/icon_all.png" alt="icon for menu food">
+                            <span>All</span>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="#">
+                            <img src="assets/img/icon_breakfast.png" alt="icon for menu food">
+                            <span>Breakfast</span>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="#">
+                            <img src="assets/img/icon_lunch.png" alt="icon for menu food">
+                            <span>Lunch</span>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="#">
+                            <img src="assets/img/icon_snacks.png" alt="icon for menu food">
+                            <span>Snacks</span>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="#">
+                            <img src="assets/img/icon_pizza.png" alt="icon for menu food">
+                            <span>Pizza</span>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="#">
+                            <img src="assets/img/icon_soups.png" alt="icon for menu food">
+                            <span>Soups</span>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="#">
+                            <img src="assets/img/icon_binner.png" alt="icon for menu food">
+                            <span>Dinner</span>
+                        </a>
+                    </li>
+                </ul>
+            </nav>
+        </div>
+        <div class="container">
+
         </div>
     </section>
 </body>
