add food menu section

--- a/index.html
+++ b/index.html
@@ -267,7 +267,69 @@
             </nav>
         </div>
         <div class="container">
-
+            <div class="all-menu-items">
+                <ul>
+                    <li class="item-food">
+                        <div class="text-menu">
+                            <a href="#">Ultimate organic fruit salad</a>
+                            <p>survived not only five centuries but the leap</p>
+                        </div>
+                        <span class="accent-color"><sup>$</sup>50.00</span>
+                    </li>
+                    <li class="item-food">
+                        <div class="text-menu">
+                            <a href="#">Plain pancakes</a>
+                            <p>Donec eget augue at diam euismod viverra</p>
+                        </div>
+                        <span class="accent-color"><sup>$</sup>68.00</span>
+                    </li>
+                    <li class="item-food">
+                        <div class="text-menu">
+                            <a href="#">Toasted jam</a>
+                            <p>Phasellus a ex accumsan, sollicitudin</p>
+                        </div>
+                        <span class="accent-color"><sup>$</sup>22.00</span>
+                    </li>
+                    <li class="item-food">
+                        <div class="text-menu">
+                            <a href="#">Toasted jam</a>
+                            <p>Phasellus a ex accumsan, sollicitudin</p>
+                        </div>
+                        <span class="accent-color"><sup>$</sup>39.00</span>
+                    </li>
+                </ul>
+                <ul>
+                    <li class="item-food">
+                        <div class="text-menu">
+                            <a href="#">Ultimate organic fruit salad</a>
+                            <p>survived not only five centuries but the leap</p>
+                        </div>
+                        <span class="accent-color"><sup>$</sup>50.00</span>
+                    </li>
+                    <li class="item-food">
+                        <div class="text-menu">
+                            <a href="#">Plain pancakes</a>
+                            <p>Donec eget augue at diam euismod viverra</p>
+                        </div>
+                        <span class="accent-color"><sup>$</sup>68.00</span>
+                    </li>
+                    <li class="item-food">
+                        <div class="text-menu">
+                            <a href="#">Toasted jam</a>
+                            <p>Phasellus a ex accumsan, sollicitudin</p>
+                        </div>
+                        <span class="accent-color"><sup>$</sup>22.00</span>
+                    </li>
+                    <li class="item-food">
+                        <div class="text-menu">
+                            <a href="#">Toasted jam</a>
+                            <p>Phasellus a ex accumsan, sollicitudin</p>
+                        </div>
+                        <span class="accent-color"><sup>$</sup>39.00</span>
+                    </li>
+                </ul>
+            </div>
+            <a href="#" class="explore-food-menu">Explor food menu</a>
         </div>
     </section>
 </body>
