complete food menu section

--- a/index.html
+++ b/index.html
@@ -265,6 +265,9 @@
                     </li>
                 </ul>
             </nav>
+            <div class="banner">
+                <img src="assets/img/food-menu-kebab.png" alt="kebab tasty banner">
+            </div>
         </div>
         <div class="container">
             <div class="all-menu-items">
@@ -330,6 +333,9 @@
                 </ul>
             </div>
             <a href="#" class="explore-food-menu">Explor food menu</a>
+            <div class="menu-banner">
+                <img src="assets/img/food-menu-meat.png" alt="tasty meat for food menu">
+            </div>
         </div>
     </section>
 </body>
