add clients comment for happ clients section

--- a/index.html
+++ b/index.html
@@ -338,5 +338,31 @@
             </div>
         </div>
     </section>
+    <section class="happy-clients">
+        <div class="overlay">
+            <div class="container">
+                <h2>Happy Clients</h2>
+                <div class="clients-review">
+                    <a href="#">
+                        <img src="assets/img/left_arrow.png" alt="arrow">
+                    </a>
+                    <div class="review-item">
+                        <p class="comment">
+                            Many desktop publishing packages and web page editors now use Lorem Ipsum as their
+                            default model text, and a search for 'lorem ipsum' will uncover many web sites still
+                            in their infancy. Various versions have evolved over the years, sometimes by accident,
+                            sometimes on purpose.
+                        </p>
+                        <div class="user-info">
+
+                        </div>
+                    </div>
+                    <a href="#">
+                        <img src="assets/img/right_arrow.png" alt="arrow">
+                    </a>
+                </div>
+            </div>
+        </div>
+    </section>
 </body>
 </html>
