complete happy clientsy section

--- a/index.html
+++ b/index.html
@@ -353,13 +353,17 @@
                             in their infancy. Various versions have evolved over the years, sometimes by accident,
                             sometimes on purpose.
                         </p>
-                        <div class="user-info">
-
-                        </div>
                     </div>
                     <a href="#">
                         <img src="assets/img/right_arrow.png" alt="arrow">
                     </a>
+                </div>
+                <div class="user-info">
+                    <img src="assets/img/user-icon.png" alt="user icon photo">
+                    <p>Dr. Prabakaran John</p>
+                    <div class="rate">
+                        <img src="assets/img/icon_star.png" alt="star for restaurant">
+                    </div>
                 </div>
             </div>
         </div>
