complete reserve your table section

--- a/index.html
+++ b/index.html
@@ -368,5 +368,58 @@
             </div>
         </div>
     </section>
+    <section class="reserve-your-table">
+        <div class="container">
+            <h2>Reserve your table</h2>
+            <div class="contact-form-with-photo">
+                <img src="assets/img/table-photo.png" alt="photo table in restaurant">
+                <form action="#" method="post">
+                    <div class="inputs">
+                        <ul>
+                            <li>
+                                <input type="text" placeholder="Name*" required>
+                                <img src="assets/img/icon_name.png" alt="icon for input">
+                            </li>
+                            <li>
+                                <input type="text" placeholder="Time*" required>
+                                <img src="assets/img/icon_time.png" alt="icon for input">
+                            </li>
+                            <li>
+                                <input type="text" placeholder="Guests*" required>
+                                <img src="assets/img/icon_guest.png" alt="icon for input">
+                            </li>
+                        </ul>
+                        <ul>
+                            <li>
+                                <input type="text" placeholder="Date*" required>
+                                <img src="assets/img/icon_calander.png" alt="icon for input">
+                            </li>
+                            <li>
+                                <input type="text" placeholder="Email Address*" required>
+                                <img src="assets/img/icon_email.png" alt="icon for input">
+                            </li>
+                            <li>
+                                <input type="text" placeholder="Phone Number*" required>
+                                <img src="assets/img/icon_phone_form.png" alt="icon for input">
+                            </li>
+                        </ul>
+                    </div>
+                    <div class="submit-with-info">
+                        <input type="submit" value="Make reservation">
+                        <div class="right">
+                            <a href="#" class="reservation-link">
+                                You can also call
+                                <span class="secondary-color">for a reservation</span>
+                            </a>
+                            <a href="tel:1007000005" class="phone-reservation">1-007 000 005</a>
+                        </div>
+                    </div>
+                </form>
+            </div>
+        </div>
+    </section>
+    <footer>
+        
+    </footer>
 </body>
 </html>
