almost complete footer

--- a/index.html
+++ b/index.html
@@ -419,7 +419,83 @@
         </div>
     </section>
     <footer>
-        
+        <div class="container">
+            <div class="top">
+                <nav class="main-footer-navigation">
+                    <h2>Navigation</h2>
+                    <ul>
+                        <li>
+                            <a href="#">Navigation</a>
+                        </li>
+                        <li>
+                            <a href="#">About us</a>
+                        </li>
+                        <li>
+                            <a href="#">Menu</a>
+                        </li>
+                        <li>
+                            <a href="#">Reservation</a>
+                        </li>
+                        <li>
+                            <a href="#">Recipe</a>
+                        </li>
+                        <li>
+                            <a href="#">Blog</a>
+                        </li>
+                        <li>
+                            <a href="#">Contact Us</a>
+                        </li>
+                    </ul>
+                </nav>
+                <div class="news-letter">
+                    <h2>News letter</h2>
+                    <form action="#" method="post" class="subscribe-news">
+                        <label for="footer-email">Enter your email address and subscribe daily newsletter</label>
+                        <div class="input-with-submit">
+                            <div class="mail-input">
+                                <img src="assets/img/icon_email_footer.png" alt="icon email for footer">
+                                <input type="text" placeholder="Email Address" id="footer-email">
+                            </div>
+                            <input type="submit" placeholder="Subscribe">
+                        </div>
+                    </form>
+                    <ul class="social-icon">
+                        <li>
+                            <a href="#">
+                                <img src="assets/img/facebook-icon.png" alt="facebook icon">
+                            </a>
+                        </li>
+                        <li>
+                            <a href="#">
+                                <img src="assets/img/twitter-icon.png" alt="twitter icon">
+                            </a>
+                        </li>
+                        <li>
+                            <a href="#">
+                                <img src="assets/img/google-icon.png" alt="google icon">
+                            </a>
+                        </li>
+                    </ul>
+                </div>
+                <div class="our-app-avilable">
+                    <h2>Our app avilable</h2>
+                    <a href="#" class="store">
+                        <img src="assets/img/icon_apple.png" alt="apple store">
+                        <div class="text-store">
+                            <p>Avilable on the</p>
+                            <p class="name-store">App Store</p>
+                        </div>
+                    </a>
+                    <a href="#" class="store">
+                        <img src="assets/img/icon_google_play.png" alt="google store">
+                        <div class="text-store">
+                            <p>Get it on</p>
+                            <p class="name-store">Google Play</p>
+                        </div>
+                    </a>
+                </div>
+            </div>
+        </div>
     </footer>
 </body>
 </html>
