--- a/index.html
+++ b/index.html
@@ -495,6 +495,9 @@
                     </a>
                 </div>
             </div>
+            <div class="bottom">
+                <h2><span>2016 © Luxury RestaurAnt, All rights reserved</span></h2>
+            </div>
         </div>
     </footer>
 </body>
